# slideshow

./: Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  SDLFont.cpp  SDLFont.h  cache.h  configure  configure.ac  file_list.cpp  file_list.h  fontdata.cpp  fontdata.h  installer.nsi  main.cpp  slideshow.cpp  slideshow.dsp  slideshow.dsw  slideshow.h  slideshow.html
Amiga/: makefile  makefile.info
MacOS X/MNSlideShowX/: MNSlideShowX.applescript
MacOS X/MNSlideShowX/English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
MacOS X/MNSlideShowX/MNSlideShowX.xcodeproj/: alg.mode1v3  alg.pbxuser  default.pbxuser  macniaque.mode1v3  macniaque.pbxuser  project.pbxproj
MacOS X/Slideshow/: Info.plist  SDLMain.m  Slideshow_Prefix.pch
MacOS X/Slideshow/English.lproj/: InfoPlist.strings
MacOS X/Slideshow/Slideshow.xcodeproj/: macniaque.mode1v3  macniaque.pbxuser  project.pbxproj
man/: Makefile.am  Makefile.in  slideshow.1
ssfront/: PersistentPref.cpp  PersistentPref.h  StdAfx.cpp  StdAfx.h  resource.h  ssfront.aps  ssfront.clw  ssfront.cpp  ssfront.dsp  ssfront.dsw  ssfront.h  ssfront.rc  ssfrontDlg.cpp  ssfrontDlg.h
ssfront/res/: ssfront.rc2
